fixes overflow-y

--- a/view/locacao/style.css
+++ b/view/locacao/style.css
@@ -6,8 +6,10 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow-y: hidden;
     flex-direction: column;
+    position: relative;
+    overflow-y: scroll;
+    width: 100%;
 }
 
 .payment-container {
@@ -19,9 +21,11 @@ body {
     max-width: 400px;
     width: 100%;
     text-align: center;
-    overflow-y: hidden;
+    overflow-y: scroll;
     overflow-x: hidden;
-    
+    flex-direction: column;
+    position: relative;
+    margin-bottom: 25px;
 }
 
 label {
